--- a/main/conf/locale/cs/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-12 11:34+0200\n"
+"POT-Creation-Date: 2014-07-12 18:29+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,45 +17,123 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: geography/static/dist/js/blind-maps.min.js:173
-#: geography/static/dist/js/blind-maps.min.js:310
+#: geography/static/dist/js/blind-maps.min.js:176
+#: geography/static/dist/js/blind-maps.min.js:313
 #: geography/static/js/controllers.js:45
 #: geography/static/js/controllers.js:182
 msgid "V aplikaci bohužel nastala chyba."
 msgstr "V aplikaci bohužel nastala chyba."
 
-#: templates/home.html:54 templates/generated/homepage.html:25
+#: geography/static/dist/js/blind-maps.min.js:392
+#: geography/static/js/services.js:20
+msgid "Politická mapa"
+msgstr "Politická mapa"
+
+#: geography/static/dist/js/blind-maps.min.js:405
+#: geography/static/js/services.js:33
+msgid "Vodstvo"
+msgstr "Vodstvo"
+
+#: geography/static/dist/js/blind-maps.min.js:410
+#: geography/static/js/services.js:38
+msgid "Povrch"
+msgstr "Povrch"
+
+#: geography/static/dist/js/blind-maps.min.js:638
+#: geography/static/js/services.js:266
+msgid "Jak to funguje?"
+msgstr "Jak to funguje?"
+
+#: geography/static/dist/js/blind-maps.min.js:639
+#: geography/static/js/services.js:267
+msgid "O prjektu"
+msgstr "O prjektu"
+
+#: geography/static/dist/js/blind-maps.min.js:640
+#: geography/static/js/services.js:268
+msgid "Přehled map"
+msgstr "Přehled map"
+
+#: geography/static/dist/js/blind-maps.min.js:1319
+#: geography/static/js/directives.js:17
+msgid "Odhad znalosti"
+msgstr "Odhad znalosti"
+
+#: geography/static/dist/js/blind-maps.min.js:1346
+#: geography/static/js/directives.js:44
+msgid "Moje znalosti"
+msgstr "Moje znalosti"
+
+#: geography/static/dist/js/blind-maps.min.js:1352
+#: geography/static/js/directives.js:50
+msgid "Průměrný nový uživatel"
+msgstr "Průměrný nový uživatel"
+
+#: geography/static/dist/js/blind-maps.min.js:1479
+#: geography/static/js/directives.js:177
+msgid "Naučeno"
+msgstr ""
+
+#: geography/static/dist/js/blind-maps.min.js:1486
+#: geography/static/js/directives.js:184
+#, fuzzy
+msgid "Procvičováno"
+msgstr "Procvičovat"
+
+#: geography/static/dist/js/blind-maps.min.js:1525
+#: geography/static/js/directives.js:223
+msgid "Aktuální úroveň"
+msgstr "Aktuální úroveň"
+
+#: geography/static/dist/js/blind-maps.min.js:1533
+#: geography/static/js/directives.js:231
+msgid "Příští úroveň"
+msgstr "Příští úroveň"
+
 msgid "Slepé Mapy"
 msgstr "Slepé Mapy"
 
-#: templates/generated/homepage.html:27
 msgid "Co chcete procvičovat?"
 msgstr "Co chcete procvičovat?"
 
-#: templates/generated/homepage.html:30
 msgid "Státy světa"
 msgstr "Státy světa"
 
-#: templates/generated/homepage.html:33
 msgid "Státy Evropy"
 msgstr "Státy Evropy"
 
-#: templates/generated/homepage.html:36
 msgid "Státy USA"
 msgstr "Státy USA"
 
-#: templates/generated/homepage.html:39
 msgid "Kraje ČR"
 msgstr "Kraje ČR"
 
-#: templates/generated/homepage.html:42
 msgid "Města ČR"
 msgstr "Města ČR"
 
-#: templates/generated/homepage.html:45
 msgid "Pohoří Evropy"
 msgstr "Pohoří Evropy"
 
-#: templates/generated/homepage.html:48
 msgid "nebo něco jiného"
 msgstr "nebo něco jiného"
+
+msgid "Vybráno"
+msgstr "Vybráno"
+
+msgid "Nevím"
+msgstr "Nevím"
+
+msgid "Pokračovat"
+msgstr "Pokračovat"
+
+msgid "Znovu zvýraznit"
+msgstr "Znovu zvýraznit"
+
+msgid "Úspěšnost"
+msgstr "Úspěšnost"
+
+msgid "Mapa znalostí"
+msgstr "Mapa znalostí"
+
+msgid "Znovu procvičovat"
+msgstr "Znovu procvičovat"
