--- a/main/conf/locale/en/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/en/LC_MESSAGES/djangojs.po
@@ -142,3 +142,62 @@ msgstr "Practice"
 
 msgid "Svět"
 msgstr "World"
+
+msgid "Zeměpis hrou"
+msgstr "Geography game"
+
+msgid ""
+"Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
+"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
+"zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
+msgstr ""
+"Practice your geography knowledge in a playful way. Can you color green the "
+"map of Europe? Or map of the US? And what about the whole world?"
+
+msgid "Adaptabilní procvičování"
+msgstr "Adaptive practice"
+
+msgid ""
+"Systém vás zkouší ze znalosti slepých map, přičemž chování systému je "
+"adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
+"(otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak "
+"předkládá státy, jejichž procvičení je pro vás nejužitečnější."
+msgstr ""
+"The application examines your knowledge of maps adaptively - depending on "
+"your level of knowledge is chosen type of questions (how many options etc.) "
+"and repeat frequency. Thus is asks you about the countries which are most "
+"beneficial to practice."
+
+msgid "Vizualizace znalostí"
+msgstr "Knowledge visualization"
+
+msgid ""
+"Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní "
+"vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
+msgstr ""
+"Based on your answers the system estimates your knowledge and displays it is "
+"a form of map, which can help you to realize what you actually know."
+
+msgid "Specializovaný systém"
+msgstr "Specialized system"
+
+msgid ""
+"Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
+"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
+"slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
+msgstr ""
+"There are many other learning systems that provide blind maps practice, but "
+"they usually cover also many other areas. Our system focuses exclusively on "
+"blind maps, which allows it to be optimized for this area."
+
+msgid "Učení z dat"
+msgstr "Data mining"
+
+msgid ""
+"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
+"datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je "
+"těžší poznat Keňu nebo Nigérii."
+msgstr ""
+"The application learns from data of all users. Question choice is based on "
+"this data, instead of being based on knowledge of an geography expert who "
+"\"knows\" whether it's generally more difficult to know Kenya or Nigeria."
