--- a/main/conf/locale/en/LC_MESSAGES/django.po
+++ b/main/conf/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-07-12 21:02+0200\n"
+"POT-Creation-Date: 2014-07-19 17:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -337,66 +337,52 @@ msgid "Zeměpis hrou"
 msgstr "Geography game"
 
 #: templates/generated/homepage.html:63
-msgid ""
-"Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
-"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
-"zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
+msgid "Zeměpis hrou - text"
 msgstr ""
-"Practice your geography knowledge in a playful way. Can you color green the "
-"map of Europe? Or map of the US? And what about the whole world?"
+"Practice your geography knowledge in a playful way. Can you colour green "
+"the map of Europe? Or map of the US? And what about the whole world?"
 
 #: templates/generated/homepage.html:67
 msgid "Adaptabilní procvičování"
 msgstr "Adaptive practice"
 
 #: templates/generated/homepage.html:68
-msgid ""
-"Systém vás zkouší ze znalosti slepých map, přičemž chování systému je "
-"adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
-"(otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak "
-"předkládá státy, jejichž procvičení je pro vás nejužitečnější."
+msgid "Adaptabilní procvičování - text"
 msgstr ""
 "The application examines your knowledge of maps adaptively - depending on "
-"your level of knowledge is chosen type of questions (how many options etc.) "
-"and repeat frequency. Thus is asks you about the countries which are most "
-"beneficial to practice."
+"your level of knowledge is chosen type of questions (how many options "
+"etc.) and repeat frequency. Thus is asks you about the countries which "
+"are most beneficial to practice."
 
 #: templates/generated/homepage.html:72
 msgid "Vizualizace znalostí"
 msgstr "Knowledge visualization"
 
 #: templates/generated/homepage.html:73
-msgid ""
-"Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní "
-"vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
+msgid "Vizualizace znalostí - text"
 msgstr ""
-"Based on your answers the system estimates your knowledge and displays it is "
-"a form of map, which can help you to realize what you actually know."
+"Based on your answers the system estimates your knowledge and displays it "
+"is a form of map, which can help you to realize what you actually know."
 
 #: templates/generated/homepage.html:77
 msgid "Specializovaný systém"
 msgstr "Specialized system"
 
 #: templates/generated/homepage.html:78
-msgid ""
-"Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
-"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
-"slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
+msgid "Specializovaný systém - text"
 msgstr ""
-"There are many other learning systems that provide blind maps practice, but "
-"they usually cover also many other areas. Our system focuses exclusively on "
-"blind maps, which allows it to be optimized for this area."
+"There are many other learning systems that provide blind maps practice, "
+"but they usually cover also many other areas. Our system focuses "
+"exclusively on blind maps, which allows it to be optimized for this area."
 
 #: templates/generated/homepage.html:82
 msgid "Učení z dat"
 msgstr "Data mining"
 
 #: templates/generated/homepage.html:83
-msgid ""
-"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
-"datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je "
-"těžší poznat Keňu nebo Nigérii."
+msgid "Učení z dat - text"
 msgstr ""
-"The application learns from data of all users. Question choice is based on "
-"this data, instead of being based on knowledge of an geography expert who "
-"\"knows\" whether it's generally more difficult to know Kenya or Nigeria."
+"The application learns from data of all users. Question choice is based "
+"on this data, instead of being based on knowledge of an geography expert "
+"who \"knows\" whether it's generally more difficult to know Kenya or "
+"Nigeria."
