--- a/main/conf/locale/cs/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/cs/LC_MESSAGES/djangojs.po
@@ -146,10 +146,7 @@ msgstr "Svět"
 msgid "Zeměpis hrou"
 msgstr "Zeměpis hrou"
 
-msgid ""
-"Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
-"soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
-"zeleno celou mapu Evropy? Celou ČR? A co celý svět?"
+msgid "Zeměpis hrou - text"
 msgstr ""
 "Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím "
 "soutěžíte jen sami se sebou, respektive proti systému. Dokážete obarvit na "
@@ -158,23 +155,17 @@ msgstr ""
 msgid "Adaptabilní procvičování"
 msgstr "Adaptabilní procvičování"
 
-msgid ""
-"Systém vás zkouší ze znalosti slepých map, přičemž chování systému je "
-"adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
-"(otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak "
-"předkládá státy, jejichž procvičení je pro vás nejužitečnější."
+msgid "Adaptabilní procvičování - text"
 msgstr ""
-"Systém vás zkouší ze znalosti slepých map, přičemž chování systému je "
-"adaptabilní - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
+"Každá slepá mapa nabízí adaptabilní procvičování "
+" - podle toho, jaké máte vědomosti, aplikace volí podobu otázek "
 "(otevřená, výběr z možností) a frekvenci opakování. Aplikace vám tak "
 "předkládá státy, jejichž procvičení je pro vás nejužitečnější."
 
 msgid "Vizualizace znalostí"
 msgstr "Vizualizace znalostí"
 
-msgid ""
-"Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní "
-"vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
+msgid "Vizualizace znalostí - text"
 msgstr ""
 "Na základě odpovědí systém odhadne jak dobře znáte různé státy a znázorní "
 "vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte."
@@ -182,10 +173,7 @@ msgstr ""
 msgid "Specializovaný systém"
 msgstr "Specializovaný systém"
 
-msgid ""
-"Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
-"většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
-"slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný."
+msgid "Specializovaný systém - text"
 msgstr ""
 "Procvičování slepých map nabízí i řada jiných výukových systémů, ty však "
 "většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na "
@@ -194,9 +182,8 @@ msgstr ""
 msgid "Učení z dat"
 msgstr "Učení z dat"
 
-msgid ""
-"Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
-"datech, nikoliv na znalostech experta na zeměpis, který "
+msgid "Učení z dat - text"
 msgstr ""
 "Aplikace se učí z dat od všech uživatelů. Výběr otázek je založen na těchto "
-"datech, nikoliv na znalostech experta na zeměpis, který "
+"datech, nikoliv na znalostech experta na zeměpis, který \"ví\", jestli je "
+"těžší poznat Keňu nebo Nigérii."
