--- a/main/conf/locale/en/LC_MESSAGES/djangojs.po
+++ b/main/conf/locale/en/LC_MESSAGES/djangojs.po
@@ -89,6 +89,9 @@ msgstr "Current level"
 msgid "Příští úroveň"
 msgstr "Next level"
 
+msgid "bodů"
+msgstr "points"
+
 msgid "Slepé Mapy"
 msgstr "Outline maps"
 
